--- a/_posts/2018-03-16-test.md
+++ b/_posts/2018-03-16-test.md
@@ -4,13 +4,15 @@ title: 테스트
 subtitle: 시공조아
 ---
 
+시공의 폭풍은 정말 최고야!
+
 <table class="protectTable">
 <tbody>
 <tr>
 <td>
 <!-- clix_content 이 안에 본문 내용 외에 다른 내용을 절대 넣지 말 것  -->
 <script type="text/javascript">//<![CDATA[document.write(removeRestrictTag());//]]></script>
-<img style="width:0 !important;" src="https://i.imgur.com/6IAaB7b.gif" class="txc-image" id="A_2413A7435920965D2A87D1"><p style="display:none;">DOTAX 알랭드곱빼기</p>
+<img style="width:0 !important;" src="https://i.imgur.com/6IAaB7b.gif" class="txc-image" id="A_2413A7435920965D2A87D1"><p style="display:none;"></p>
 
 <style>
 
@@ -154,7 +156,7 @@ audio {visibility: hidden;}
 <div class="sigong_detail2"></div></div>
 <div class="hos"></div></div>
 <div class="nickzzal">
-<img src="https://i.imgur.com/6IAaB7b.gif" class="txc-image" id="A_2413A7435920965D2A87D1"><div>
+<img src="http://www.gtec.ac.kr/share/img/kinst/content/img_basic2.gif" class="txc-image" id="A_2413A7435920965D2A87D1"><div>
 <div style="display: none;">
 <audio autoplay="true" controls="" class="attach_audio" src="http://cdh0912.github.io/assets/files/시공의 폭풍은 정말 최고야.mp3" type="audio/mpeg"></audio>
 <audio autoplay="true" controls="" class="attach_audio" src="http://cdh0912.github.io/assets/files/시공좋아시공좋아.mp3" type="audio/mpeg"></audio>
