--- a/_posts/2018-03-16-test.md
+++ b/_posts/2018-03-16-test.md
@@ -3,7 +3,6 @@ layout: post
 title: 테스트
 subtitle: 시공조아
 ---
-
 시공의 폭풍은 정말 최고야!
 
 <table class="protectTable">
@@ -12,7 +11,7 @@ subtitle: 시공조아
 <td>
 <!-- clix_content 이 안에 본문 내용 외에 다른 내용을 절대 넣지 말 것  -->
 <script type="text/javascript">//<![CDATA[document.write(removeRestrictTag());//]]></script>
-<img style="width:0 !important;" src="https://i.imgur.com/6IAaB7b.gif" class="txc-image" id="A_2413A7435920965D2A87D1"><p style="display:none;"></p>
+<img style="width:0 !important;" src="http://www.gtec.ac.kr/share/img/kinst/content/img_basic2.gif" class="txc-image" id="A_2413A7435920965D2A87D1"><p style="display:none;"></p>
 
 <style>
 
